# YellowDuckie

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  configure~  libyellowduckiecoinconsensus.pc.in  yd.json
doc/: README.md  (+33 more)
doc/man/: Makefile.am  yellowduckiecoin-cli.1  yellowduckiecoin-qt.1  yellowduckiecoin-tx.1  yellowduckiecoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  (+95 more)
src/assets/: assetdb.cpp  assetdb.h  assets.cpp  assets.h  assetsnapshotdb.cpp  assetsnapshotdb.h  assettypes.cpp  assettypes.h  messages.cpp  messages.h  myassetsdb.cpp  myassetsdb.h  restricteddb.cpp  restricteddb.h  rewards.cpp  rewards.h  snapshotrequestdb.cpp  snapshotrequestdb.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_yellowduckiecoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.cpp  consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.cpp  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.cpp  assettablemodel.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createassetdialog.cpp  createassetdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  currencyunits.h  darkstyle.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  (+99 more)
src/qt/forms/: addressbookpage.ui  assetcontroldialog.ui  assetsdialog.ui  coincontroldialog.ui  createassetdialog.ui  debugwindow.ui  helpmessagedialog.ui  mnemonicdialog1.ui  mnemonicdialog2.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  reissueassetdialog.ui  restrictedassetsdialog.ui  sendassetsentry.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: yellowduckiecoin_af.ts  yellowduckiecoin_af_ZA.ts  yellowduckiecoin_ar.ts  yellowduckiecoin_be_BY.ts  yellowduckiecoin_bg.ts  yellowduckiecoin_bg_BG.ts  yellowduckiecoin_ca.ts  yellowduckiecoin_ca@valencia.ts  yellowduckiecoin_ca_ES.ts  yellowduckiecoin_cs.ts  yellowduckiecoin_cy.ts  yellowduckiecoin_da.ts  yellowduckiecoin_de.ts  yellowduckiecoin_el.ts  yellowduckiecoin_el_GR.ts  yellowduckiecoin_en.ts  yellowduckiecoin_en_GB.ts  yellowduckiecoin_eo.ts  yellowduckiecoin_es.ts  yellowduckiecoin_es_AR.ts  yellowduckiecoin_es_CL.ts  yellowduckiecoin_es_CO.ts  yellowduckiecoin_es_DO.ts  yellowduckiecoin_es_ES.ts  yellowduckiecoin_es_MX.ts  yellowduckiecoin_es_UY.ts  yellowduckiecoin_es_VE.ts  yellowduckiecoin_et.ts  yellowduckiecoin_et_EE.ts  yellowduckiecoin_eu_ES.ts  yellowduckiecoin_fa.ts  yellowduckiecoin_fa_IR.ts  yellowduckiecoin_fi.ts  (+52 more)
src/rpc/: assets.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  messages.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  rewards.cpp  safemode.h  server.cpp  server.h  test.json
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  yellowduckiecoinconsensus.cpp  yellowduckiecoinconsensus.h
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  kawpow_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  (+29 more)
src/wallet/: bip39_english.h  coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+284 files in other folders)
