dist_man1_MANS=

if BUILD_YellowDuckieCoinD
  dist_man1_MANS+=yellowduckiecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=yellowduckiecoin-qt.1
endif

if BUILD_YellowDuckieCoin_CLI
  dist_man1_MANS+=yellowduckiecoin-cli.1
endif

if BUILD_YellowDuckieCoin_TX
  dist_man1_MANS+=yellowduckiecoin-tx.1
endif